--- a/native_flutter_communication/android/app/src/main/AndroidManifest.xml
+++ b/native_flutter_communication/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,12 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:icon="@mipmap/ic_launcher"
-        android:label="native_flutter_communication">
-        <activity android:name=".MethodChannelActivity"></activity>
+        android:label="native_flutter_communication"
+        android:theme="@style/LaunchTheme">
+        <activity android:name=".AddCommodityActivity"></activity>
+        <activity android:name=".RandomWordActivity" />
+        <activity android:name=".AccountEditActivity" />
+        <activity android:name=".LoginActivityActivity" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
