--- a/native_flutter_communication/pubspec.yaml
+++ b/native_flutter_communication/pubspec.yaml
@@ -22,8 +22,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
+  # json
+  json_annotation : ^3.0.1
+  json_serializable: ^3.2.5
+  build_runner: ^1.7.4
+  # word
+  english_words: ^3.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
